# flood_mapper

./: README.md  conftest.py  pyproject.toml  requirements.txt  run_flood_mapping.ipynb  setup.py
.virtual_documents/scripts/: run_flood_mapping.ipynb
data/: Lomé_city.geojson  aoi_hist.geojson  aoi_hist_region.geojson
flood_mapper/: __init__ .py  authentication.py  conftest.py  data_ingestion.py  flood_detection.py  forecast.py  preprocessing.py  utils.py  visualization.py
flood_mapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: run_flood_mapping.ipynb  run_flood_mapping.py
scripts/.ipynb_checkpoints/: run_flood_mapping-checkpoint.ipynb
tests/: __init__ .py  test_flood_mapper.py
